# JMT

./: .gitignore  CLAUDE.md  OVERVIEW.md  PROMPT_HISTORY.md  REQUIREMENTS.md  Untitled.jmt  build.fan  requirements.yaml
.claude/commands/: aida-capture.md  aida-commit.md  aida-evaluate.md  aida-implement.md  aida-req.md  aida-sync.md  review.md  status.md
.claude/skills/: aida-capture.md  aida-commit.md  aida-docs.md  aida-evaluate.md  aida-implement.md  aida-plan.md  aida-release.md  aida-req.md  aida-sync.md
fan/: JsmAttributes.fan  JsmCanvas.fan  JsmChoice.fan  JsmCircleNode.fan  JsmConnection.fan  JsmDiagram.fan  JsmDiagramSettings.fan  JsmEvent.fan  JsmFinal.fan  JsmFork.fan  JsmGenerator.fan  JsmGui.fan  JsmInitial.fan  JsmJoin.fan  JsmJunction.fan  JsmLineSegment.fan  JsmNode.fan  JsmOptions.fan  JsmPoint.fan  JsmPseudoState.fan  JsmRegion.fan  JsmSmNode.fan  JsmState.fan  JsmTransition.fan  JsmUtil.fan  StateMachineCanvas.fan
jmt-rust/: Cargo.toml
jmt-rust/jmt-client/: Cargo.toml
jmt-rust/jmt-client/src/: app.rs  lib.rs  server_client.rs
jmt-rust/jmt-client/src/canvas/: mod.rs  renderer.rs
jmt-rust/jmt-client/src/panels/: menu_bar.rs  mod.rs  properties.rs  status_bar.rs  toolbar.rs
jmt-rust/jmt-core/: Cargo.toml
jmt-rust/jmt-core/src/: connection.rs  diagram.rs  diagram_type.rs  edit_mode.rs  geometry.rs  lib.rs  settings.rs
jmt-rust/jmt-core/src/activity/: action.rs  control_flow.rs  mod.rs  object_node.rs  partition.rs  swimlane.rs
jmt-rust/jmt-core/src/node/: mod.rs  pseudo.rs  region.rs  state.rs
jmt-rust/jmt-core/src/sequence/: activation.rs  fragment.rs  lifeline.rs  message.rs  mod.rs
jmt-rust/jmt-core/src/usecase/: actor.rs  mod.rs  relationship.rs  system_boundary.rs  use_case.rs
jmt-rust/jmt-desktop/: Cargo.toml
jmt-rust/jmt-desktop/src/: main.rs
jmt-rust/jmt-proto/: Cargo.toml  build.rs
jmt-rust/jmt-proto/proto/: commands.proto  diagram.proto
jmt-rust/jmt-proto/src/: jmt.rs  lib.rs
jmt-rust/jmt-server/: Cargo.toml
jmt-rust/jmt-server/src/: file_ops.rs  lib.rs  main.rs  service.rs
