[package]
name = "jmt-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "egui frontend for JMT state machine editor"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jmt-core = { path = "../jmt-core" }
jmt-proto = { path = "../jmt-proto" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
tonic = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
gloo-net = "0.6"
