[package]
name = "jmt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data types and domain logic for JMT state machine editor"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
