[package]
name = "jmt-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protobuf definitions for JMT client-server communication"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
jmt-core = { path = "../jmt-core" }

[build-dependencies]
prost-build = "0.13"
