[package]
name = "jmt-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Backend server for JMT file operations"

[dependencies]
jmt-core = { path = "../jmt-core" }
jmt-proto = { path = "../jmt-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-tungstenite = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = "0.3"
